<resources>
    <string name="app_name">Jukebox</string>
    <string name="button_host_text">HOST PARTY</string>
    <string name="button_guest_text">JOIN PARTY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_skips_text">Song Skips</string>
    <string name="label_skip_threshold">Percentage of votes needed to skip</string>
    <string name="label_skip_timer">Time given to skip</string>
    <string name="header_suggestions">Song Suggestions</string>
    <string name="label_suggestion_allow">Allow New</string>
    <string name="label_suggestion_limit">Max number of suggestions</string>
    <string name="button_continue">Continue</string>
    <string name="edit_text_name">Party Name</string>
    <string name="edit_text_theme">Party Theme</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_vote_to_skip">Vote to Skip</string>
    <string name="songcover_name1">On &amp; On</string>
    <string name="songcover_name2">Heroes Tonight</string>
    <string name="songcover_name3">Invincible</string>
    <string name="songcover_name4">My Heart</string>
    <string name="songcover_name5">Blank</string>
    <string name="songcover_name6">Symbolism</string>
    <string name="songcover_name7">Why We Lose</string>
    <string name="songcover_name8">Cradles</string>
    <string name="songcover_name9">Shine</string>
    <string name="songcover_name10">Invisible</string>
    <string name="songcover_artist1">Cartoon, Daniel Levi</string>
    <string name="songcover_artist2">Janji, Johnning</string>
    <string name="songcover_artist3">DEAF KEV</string>
    <string name="songcover_artist4">Different Heaven, EH!DE</string>
    <string name="songcover_artist5">Disfigure</string>
    <string name="songcover_artist6">Electro-Light</string>
    <string name="songcover_artist7">Cartoon, Coleman Trapp</string>
    <string name="songcover_artist8">Sub Urban</string>
    <string name="songcover_artist9">Spektrem</string>
    <string name="songcover_artist10">Julius Dreisig, Zeus X Crona</string>
    <string name="songcover_url1">https://www.dropbox.com/s/5f1l6seztxvq373/Cartoon%20-%20On%20_%20On%20%28feat.%20Daniel%20Levi%29%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url2">https://www.dropbox.com/s/drg346o7itlc2z8/Janji%20-%20Heroes%20Tonight%20%28feat.%20Johnning%29%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url3">https://www.dropbox.com/s/ja78o8y5lbmuve7/DEAF%20KEV%20-%20Invincible%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url4">https://www.dropbox.com/s/uv6xwz2hrfb02q8/Different%20Heaven%20_%20EH%20DE%20-%20My%20Heart%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url5">https://www.dropbox.com/s/by9a041qc3z8wq9/Disfigure%20-%20Blank%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url6">https://www.dropbox.com/s/2giv46b72vlqtl9/Electro-Light%20-%20Symbolism%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url7">https://www.dropbox.com/s/t5sgl6fz11t5bpv/Cartoon%20-%20Why%20We%20Lose%20%28feat.%20Coleman%20Trapp%29%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url8">https://www.dropbox.com/s/u0q0qhca42m01v1/Sub%20Urban%20-%20Cradles%20%5BNCS%20Release%5D.mp3?dl=1</string>
    <string name="songcover_url9">https://www.dropbox.com/s/hqnr4t994hk5bpt/Spektrem%20-%20Shine%20_NCS%20Release_.mp3?dl=1</string>
    <string name="songcover_url10">https://www.dropbox.com/s/i9cuhhgeq1x5u9c/Julius%20Dreisig%20%26%20Zeus%20X%20Crona%20-%20Invisible.mp3?dl=1</string>
    <string name="skip_threshold_number">%d%%</string>
    <string name="skip_threshold_warning_too_low">Warning: This only requires %d%% of guests to vote in order to skip which may lead to many song skips</string>
    <string name="skip_threshold_warning_0">Warning: This only requires 1 guest to vote in order to skip which may lead to many song skips</string>
    <string name="skip_threshold_warning_too_high">Warning: This requires %d%% of guests to vote in order to skip which may lead to very few song skips</string>
    <string name="skip_threshold_warning_100">Warning: This requires every guest to vote in order to skip which may lead to very few song skips</string>
    <string name="skip_timer_number">%ds</string>
    <string name="skip_timer_warning_too_low">Warning: This only gives guests %d seconds to vote to skip which may not be enough time</string>
    <string name="skip_timer_warning_0">Warning: This will disable guests from skipping songs</string>
    <string name="skip_timer_warning_1">Warning: This only gives guests 1 second to vote to skip which may not be enough time</string>
    <string name="skip_timer_warning_too_high">Warning: This gives guests %d seconds to vote to skip which may lead to songs being skipped in the middle</string>
    <string name="default_song_title">SHIIEEHHHHHHHHHHHHHHHHHHH</string>
    <string name="host_creation_top_text">Details for your guests…</string>
    <string name="host_overview_top_text">Party Details</string>
    <string name="suggestion_limit_warning_0">Warning: This will disable guests from suggesting songs</string>
    <string name="suggestion_limit_warning_too_high">Warning: This allows guests to suggest up to %d songs which may lead to low quality submissions</string>
    <string name="host_settings_save">Changes saved successfully!</string>
</resources>