<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayoutHostSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".HostSettingFragment"
    android:paddingBottom="76dp" > <!-- bottomNavBar=56 + 20 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginBottom="16dp"
        android:id="@+id/linearLayoutHostSettingsSkips" >

        <TextView
            android:id="@+id/header_skips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_skips_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:id="@+id/linearLayoutHostSettingsSkipsPercent" >

            <TextView
                android:id="@+id/label_skip_threshold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_skip_threshold" />

            <EditText
                android:id="@+id/edit_skip_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="30" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:id="@+id/linearLayoutHostSettingsSkipsTimer" >

            <TextView
                android:id="@+id/label_skip_timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_skip_timer" />

            <EditText
                android:id="@+id/edit_skip_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="30"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHostSettingsSkips"
        android:id="@+id/linearLayoutHostSettingsSuggestions"
        >

        <TextView
            android:id="@+id/header_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_suggestions"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:id="@+id/linearLayoutHostSettingsSuggestionsNew" >

            <TextView
                android:id="@+id/label_suggestion_allow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_suggestion_allow" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_suggestion_allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:id="@+id/linearLayoutHostSettingsSuggestionsLimit">

            <TextView
                android:id="@+id/label_suggestion_limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_suggestion_limit" />

            <EditText
                android:id="@+id/edit_suggestion_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="3" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Party"
        android:layout_gravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:id="@+id/buttonHostSettingsEndParty" />
</androidx.constraintlayout.widget.ConstraintLayout>